deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventmanager
  namespace: eventmanager
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: eventmanager
