deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventmanager
  namespace: eventmanager
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "your-domain-name"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eventmanager
            port:
              number: 80
